# matplotlib-slides

./: AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: example.py  root_example.py
src/matplotlib_slides/: __init__.py  root_mpl_hist1d.py  slides.py
